[tool.poetry]
name = "poetry-250915"
version = "0.1.0"
description = "Practice Python 250915"
authors = ["UT"]
license = "UT"
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.8"
python = ">=3.7,<3.8.10"
matplotlib = "3.7.3"
pandas = "1.5.3"
numpy = "1.24.4"
seaborn = "0.12.2"
duckdb = "0.9.2"
streamlit = "1.28.0"


[tool.poetry.group.dev.dependencies]
mypy = "1.8.0"
pywinpty = "2.0.10"
jupyter = "1.0.0"
notebook = "6.5.5"
ipykernel = "6.16.2"
ipython = "8.12.3"
ipywidgets = "7.7.5"
jupyterlab = "3.6.7"
nbclient = "0.7.4"
nbconvert = "6.5.4"
jupyter-server = "1.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
